// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="container"
  onChange={undefined}
>
  <button
    className="button"
    disabled={undefined}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <input
    autoFocus={undefined}
    className="control"
    disabled={undefined}
    id={undefined}
    name="control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={undefined}
    type="text"
    value=""
  />
  <span
    className="menu bottom menu isClosedMenu"
    role="listbox"
  />
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="container outer"
  onChange={undefined}
>
  <button
    className="button"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#bebebe",
      }
    }
  />
  <input
    autoFocus={true}
    className="control"
    disabled={true}
    id="controls-id"
    name="control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="rrggbb"
    type="text"
    value="BEBEBE"
  />
  <span
    className="menu bottom menu isClosedMenu"
    role="listbox"
  />
</span>
`;
